complete register procedure and create user list management UI

--- a/src/main/resources/templates/include/navbar.html
+++ b/src/main/resources/templates/include/navbar.html
@@ -123,6 +123,7 @@ Message End
           <a href="#" class="dropdown-item dropdown-footer">See All Notifications</a>
         </div>
       </li> -->
+      <li id="register-btn" class="nav-item"></li>
       <li id="login-out-btn" class="nav-item"></li>
 
       </li>
