--- a/src/main/resources/templates/include/sidebar.html
+++ b/src/main/resources/templates/include/sidebar.html
@@ -79,6 +79,35 @@
         </li>
 
         <li class="nav-item">
+          <a href="#" class="nav-link" id="user-management">
+            <i class="nav-icon fa-solid fa-users-viewfinder"></i>
+            <p>
+              Quản lý người dùng
+              <i class="fas fa-angle-left right"></i>
+              <!-- <span class="badge badge-info right">6</span> Hiển thị số lượng thông báo-->
+            </p>
+          </a>
+          <ul class="nav nav-treeview pl-2 sidebar-ul">
+            <li class="nav-item">
+              <a
+                href="/user-list"
+                class="nav-link"
+                id="user-management_user-list"
+              >
+              <i class="nav-icon fa-solid fa-address-book"></i>
+                <p>Danh sách người dùng</p>
+              </a>
+            </li>
+            <li class="nav-item" data-toggle="tooltip" data-placement="bottom" title="Do not edit, copy this to build new page">
+              <a href="/blank.html" class="nav-link" id="category-management_blank">
+                <i class="nav-icon fa-solid fa-laptop-code fa-flip"></i>
+                <p>Blank page</p>
+              </a>
+            </li>
+          </ul>
+        </li>
+
+        <li class="nav-item">
           <a href="pages/widgets.html" class="nav-link">
             <i class="nav-icon fas fa-th"></i>
             <p>
