--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -98,6 +98,6 @@
     <script src="dist/js/adminlte.min.js"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="dist/js/pages/login.js"></script>
+    <script type="module" src="dist/js/pages/login.js"></script>
   </body>
 </html>
