--- a/src/main/resources/templates/brand-model-management.html
+++ b/src/main/resources/templates/brand-model-management.html
@@ -269,6 +269,8 @@
   <!-- ChartJS -->
   <script src="plugins/chart.js/Chart.min.js"></script>
 
+  <script src="/dist/js/services/refreshTokenService.js"></script>
+
   <!-- AdminLTE for demo purposes -->
   <script src="/dist/js/demo.js"></script>
   <script type="module" src="dist/js/pages/brand-model-management.js"></script>
