--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -944,6 +944,8 @@
   <!-- ChartJS -->
   <script src="plugins/chart.js/Chart.min.js"></script>
 
+  <script src="/dist/js/services/refreshTokenService.js"></script>
+
   <script src="/dist/js/demo.js" defer></script>
   <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
   <script type="module" src="dist/js/pages/dashboard.js"></script>
