--- a/src/main/resources/templates/user-list.html
+++ b/src/main/resources/templates/user-list.html
@@ -212,6 +212,8 @@
   <!-- ChartJS -->
   <script src="plugins/chart.js/Chart.min.js"></script>
 
+  <script src="/dist/js/services/refreshTokenService.js"></script>
+
   <!-- AdminLTE for demo purposes -->
   <script src="/dist/js/demo.js"></script>
   <script type="module" src="dist/js/pages/user-list.js"></script>
